# MLE3112

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  setup.py
examples/: data.h5  example.ipynb  guide.ipynb  python_guidance.ipynb  tasks.ipynb  test.ipynb
mle3112/: data.py  measurement.py  motor.py  plot.py  solution.py  spectrometer.py  utils.py
tests/: test_data.py  test_measurement.py
