[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MLE3112"
version = "2025.02.01"
dependencies = [
    'NUS_experiment @ git+ssh://git@github.com/dengzeyu/NUS_experiment',
]
authors=[{name="Zeyu Deng",email="dengzeyu@gmail.com"}]
maintainers=[{name = "Zeyu Deng",email="dengzeyu@gmail.com"}]
license="MIT"
description="MLE3112 Course Package"
readme = "README.md"
requires-python = ">=3.8"

