[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "MLE3112"
version = "2025.02.01"
authors=[{name="Zeyu Deng",email="dengzeyu@gmail.com"}]
maintainers=[{name = "Zeyu Deng",email="dengzeyu@gmail.com"}]
license = {text = "MIT"}
description="MLE3112 Course Package"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "unisweep @ git+https://github.com/dengzeyu/NUS_experiment@main",
  "jupyter",
  
]

